--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,17 @@
 header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 5px solid #220d08;
+  background-color: #b75c3d;
+}
+
+.title {
+  color: #220d08;
+  padding: 20px;
+  font-weight: bolder;
+}
+.title2 {
+  font-family: Helvetica, sans-serif;
+  padding: 20px  0 ;
+  font-weight: bolder;
 }
 
 .no-button {
@@ -7,18 +19,42 @@ header, .project:not(:last-child) {
   border: none;
   padding: 0;
   cursor: pointer;
-  color: #1b89bc;
-  text-decoration: none;
-  font-size: 100%;
+  color: black;
+  text-decoration: none;  
+  font-size: 150%;
+  font-weight: bolder;
+  padding: 50px;
 }
 
 .no-button:hover {
-  color: #065b83;
+  color: #e6aa28;
   text-decoration: underline;
 }
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
+.borderMD {
+  border: 5px;
+  border-style: solid;
+  border-color: #220d08;
+  border-radius: 5px;
+  background-color: #daaf93;
+  color: black;
+}
+
+.borderMD:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.borderMA {
+  padding-top: 10px;
+  background-color: #daaf93;
+}
+
+.black {
+  color: black;
+}
+
+.black:hover {
+  color: black;
+  text-decoration: none;
 }
