--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,17 +12,16 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+      <h1 class="title">
+        <a class='black'href="/">The Block Blog</a>
       </h1>
       <nav>
-        <!-- Conditionally render login or logout links -->
+        <a class="no-button" href="/">Home</a> |
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a class="no-button" href="/profile">Dashboard</a> |
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a class="no-button" href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
