--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,12 +1,6 @@
-<div class="row">
-  <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
-  </div>
-</div>
-
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3 class="title2">Write a New Blog Post</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
@@ -29,15 +23,12 @@
 
   {{#if projects.length}}
   <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+    <h3 class="title2">Current Projects:</h3>
 
     {{#each projects as |project|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
+    <div class="borderMA row mb-2">
+      <div class="col-md-10">
         <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
