--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,25 +1,7 @@
 <div class="row mt-4">
   <div class="col-md-6">
     <h3 class="title2">Write a New Blog Post</h3>
-
-    <form class="form new-project-form">
-      <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
-      </div>
-      <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
-  </div>
+    <button class="borderBase btn btn-primary"><a class= 'title2 'href="/newpost">Write a New Blog Post</a></button>
 
   {{#if projects.length}}
   <div class="col-md-6 project-list">
