--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,9 +1,9 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{description}}</p>
+  <h2>{{title}}</h2>
+  <p>{{content}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
     <button class="btn btn-primary">Update</button>
-    <button class="btn btn-danger" data-id="{{project.id}}">Delete</button>
+    <button class="btn btn-danger" data-id="{{post.id}}">Delete</button>
   </p>
 </div>
