--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,14 +3,14 @@
     <h3 class="title2">Write a New Blog Post</h3>
     <button class="borderBase btn btn-primary"><a class= 'title2 'href="/newpost">Write a New Blog Post</a></button>
 
-  {{#if projects.length}}
+  {{#if posts.length}}
   <div class="col-md-6 project-list">
-    <h3 class="title2">Current Projects:</h3>
+    <h3 class="title2">Posts</h3>
 
-    {{#each projects as |project|}}
+    {{#each posts as |post|}}
     <div class="borderMA row mb-2">
       <div class="col-md-10">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
     </div>
     {{/each}}
