got sign in sign up functioanlity working and posts, started delete update and comment methiods

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -1015,7 +1015,7 @@ a:hover {
 }
 
 .btn.btn-primary:hover {
-  background-color: #46180c;
+  background-color: #754437;
 }
 
 .btn.btn-danger {
@@ -1024,7 +1024,7 @@ a:hover {
 }
 
 .btn.btn-danger:hover {
-  background-color: #ee8294;
+  background-color: #bb5f6f;
 }
 
 .btn.btn-info {
