--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ header, .project:not(:last-child) {
   border-style: solid;
   border-color: #220d08;
   border-radius: 5px;
-  background-color: #daaf93;
+  background-color: #b75c3d;
   color: black;
 }
 
