--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,7 +4,7 @@
     <button class="borderBase btn btn-primary"><a class= 'title2 'href="/newpost">Write a New Blog Post</a></button>
 
   {{#if posts.length}}
-  <div class="col-md-6 project-list">
+  <div class="col-md-6 post-list">
     <h3 class="title2">Posts</h3>
 
     {{#each posts as |post|}}
@@ -17,5 +17,3 @@
   </div>
   {{/if}}
 </div>
-
-<script src="./js/profile.js"></script>
