--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,18 +4,34 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="name-login">Name</label>
+        <input class="form-input" type="text" id="name-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
+        <label for="password-login">Password</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
       </div>
     </form>
-    <a class= 'title2 'href="/signup/"><br>Signup</a>
+  </div>
+  <div class="col-md-6">
+    <h2>Sign-up</h2>
+
+    <form class="form signup-form">
+      <div class="form-group">
+        <label for="name-sign">Name</label>
+        <input class="form-input" type="text" id="name-sign" />
+      </div>
+      <div class="form-group">
+        <label for="password-sign">Password</label>
+        <input class="form-input" type="password" id="password-sign" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Sign-up</button>
+      </div>
+    </form>
   </div>
 </div>
 
