Started fixing update and delete routes

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -5,7 +5,7 @@
     <form class="form new-post-form">
       <div class="form-group">
         <label for="post-title">Title:</label>
-        <input class="form-input" type="text" id="post-title" name="post-name" />
+        <textarea class="form-input" type="text" id="post-title" name="post-name"></textarea>
       </div>
       <div class="form-group">
         <label for="post-content">Content:</label>
