--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,12 @@
 {{#each posts as |post| }}
-<div class="borderMD row mb-4 post">
+<a class="black" href="/comment/{{post.id}}">
+<div class="post borderMD row mb-4 post">
   <div class="col-md-12">
     <h2>
       {{post.title}}
     </h2>
-    <p>
-    {{post.content}}
-    </p>
     <p>Posted by {{post.user.name}} on {{format_date post.date_created}}</p>
-    <button class="borderBase btn btn-primary">Add Comment</button>
   </div>
 </div>
+</a>
 {{/each}}
