--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -7,9 +7,7 @@
           <textarea class="form-input" id="post-content" name="post-content">{{content}}</textarea>
           <p>Created by {{user.name}} on {{format_date date_created}}</p>
         </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Update</button>
-        </div>
+          <button id="{{id}}" type="submit" class="btn btn-primary">Update</button>
     </form>
 </div>
 
